--- a/style.css
+++ b/style.css
@@ -17,12 +17,22 @@ body {
 
 main {
   background: url(./assets/bg.jpeg) no-repeat center/cover;
-
   min-height: 100vh;
-
   display: grid;
   place-content: center;
-
   padding: 6.4rem;
   gap: 2.4rem;
+}
+
+section {
+  background: #6d67d0;
+  backdrop-filter: blur(1rem);
+  border-radius: 1rem;
+}
+
+.temperature-now {
+  background: url(./assets/bg-temp-now.jpeg);
+  position: relative;
+  display: grid;
+  grid-template-rows: max-content 1fr max-content;
 }
