--- a/style.css
+++ b/style.css
@@ -84,3 +84,29 @@ section {
 .temp .number .maxmin span {
   color: #c2bff4;
 }
+
+.celsius {
+  font-size: 2.4rem;
+  color: #dad8f7;
+  margin-top: 1.5rem;
+}
+
+.statistics {
+  padding: 1.2rem;
+  display: flex;
+  gap: 0.8rem;
+}
+
+.stats {
+  flex: 1;
+  padding: 1.2rem 1.6rem;
+  background: rgba(102, 96, 200, 0.6);
+  border-radius: 0.6rem;
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+}
+
+.stats .info {
+  color: #e7e6fb;
+}
