--- a/style.css
+++ b/style.css
@@ -110,3 +110,32 @@ section {
 .stats .info {
   color: #e7e6fb;
 }
+
+.stats .info h5 span,
+.stats .info p {
+  font-size: 1.2rem;
+}
+
+.stats .info h5 {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: baseline;
+  gap: 0.4rem;
+}
+
+/* Air Quality */
+.air-quality {
+  font-weight: 700;
+  text-align: center;
+  display: grid;
+}
+
+h2.title {
+  font-size: 1.6rem;
+  color: #dad8f7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+  margin-top: 3.2rem;
+}
