--- a/style.css
+++ b/style.css
@@ -139,3 +139,31 @@ h2.title {
   gap: 0.8rem;
   margin-top: 3.2rem;
 }
+
+.air-quality .good {
+  margin-top: 3.2rem;
+  font-size: 1.8rem;
+  color: #87ebcd;
+}
+
+.air-quality > .number {
+  margin-top: 0.4rem;
+  font-size: 4rem;
+  color: #e7e6fb;
+}
+
+.air-quality .info {
+  display: flex;
+  align-items: center;
+  margin-top: 3.2rem;
+  padding: 0 1.6rem 1.6rem;
+}
+
+.air-quality .info .number {
+  flex: 1;
+}
+
+.air-quality .info p {
+  color: #87ebcd;
+  font-size: 1.4rem;
+}
