--- a/style.css
+++ b/style.css
@@ -240,3 +240,58 @@ time.now {
   font-size: 1.4rem;
   font-weight: 700;
 }
+
+.time {
+  font-size: 1.2rem;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1rem auto 0;
+  padding: 0 1.6rem 1.6rem;
+  max-width: 27.6rem;
+}
+
+/* Week Weather */
+.week-weather {
+  padding: 4rem;
+  display: flex;
+  gap: 1.2rem;
+}
+
+.day {
+  flex: 1;
+  display: grid;
+  justify-items: center;
+  gap: 1.6rem;
+}
+
+h4.title {
+  font-size: 1.4rem;
+  color: #dad8f7;
+}
+
+.day .maxmin {
+  font-size: 700;
+  color: white;
+  font-size: 1.6rem;
+}
+
+.day .maxmin span {
+  color: #c2bff4;
+}
+
+@media (min-width: 1200px) {
+  main {
+    grid-template-columns: 48rem 27.7rem 27.7rem;
+    grid-template-rows: 24.4rem 21.2rem;
+  }
+
+  .temperature-now {
+    grid-row: 1/3;
+  }
+
+  .week-weather {
+    grid-column: 2/4;
+  }
+}
